--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -8,52 +8,41 @@
     display: flex;
     height: 100vh;
     width: 100vw;
-    /* gap: 1rem; */
     justify-content: space-around;
     align-items: center;
     padding: 8vh 0.5rem;
     box-sizing: border-box;
     z-index: 0;
-    /* gap: 2rem; */
     flex-wrap: wrap;
-    /* pointer-events: none; */
 } 
 .project-list::-webkit-scrollbar { 
     display: none;  /* Safari and Chrome */
 }
 .project {
-    /* margin: auto; */
     position: relative;
     display: flex;
     flex-direction: column;
     min-width: 22vw;
     max-width: 300px;
-    /* max-height: 35vh; */
-   /*  height: 500px; */
     border-radius: 20px;
     background-color: rgba(40, 40, 40, 0.5);
     backdrop-filter: blur(35px);
     transition-duration: 350ms;
-    /* transition-timing-function: ease-out; */
     transition-timing-function: cubic-bezier(0.4, 0.64, 0, 1.4);
     animation: appear 300ms ease-out;
     animation-iteration-count: 1;
     padding: 0.15rem;
     overflow: hidden;
     font-size: 1rem;
-    /* border: 2px solid rgb(90, 90, 90); */
 }
 .project header {
     max-height: 80%;
     border-radius: 20px 20px 0 0;
-    /* background-color: rgba(44, 44, 44, 0.7); */
     border-bottom: none;
     transition-duration: 300ms;
-    /* filter: brightness(0.5); */
     padding: 0.5rem 0.5rem;
     cursor: pointer;
     box-sizing: border-box;
-    /* width: 100% */
 }
 
 .project-screen {
@@ -185,23 +174,6 @@
     outline: 2px solid aliceblue;
 }
 
-/* .project-links button::before {
-    border-radius: 20px;
-    position: absolute;
-    content: '';
-    top: -1px;
-    bottom: -2px;
-    left: -2px;
-    right: -2px;
-    background: linear-gradient(to right, rgb(234, 141, 20), purple);
-    visibility: visible;
-    z-index: -1;
-}
-
-.project-links button:hover::after {
-    border: 2px solid white;
-} */
-
 .project-links a {
     display: flex;
     text-decoration: none;
@@ -252,5 +224,11 @@
 
     .project {
         backdrop-filter: blur(35px);
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .project:nth-last-child(1) {
+        margin-bottom: 10vh;
     }
 }
